@@ -106,13 +106,20 @@ int handle_transaction(const rc_config *global_config, transaction *tran){
 	/* only show this if we are going to do something */
 	if( tran->upgrade_pkgs->pkg_count > 0 || tran->remove_pkgs->pkg_count > 0
 	|| tran->install_pkgs->pkg_count > 0 ){
+
+		/* how much we need to download */
+		int need_to_download_size = download_size - already_download_size;
+		/* make sure it's not negative due to changing pkg sizes on upgrades */
+		if( need_to_download_size < 0 ) need_to_download_size = 0;
+
 		if( already_download_size > 0 ){
 			printf(_("Need to get %dK/%dK of archives.\n"),
-				download_size - already_download_size, download_size
+				need_to_download_size, download_size
 			);
 		}else{
 			printf(_("Need to get %dK of archives.\n"), download_size );
 		}
+
 		if( global_config->download_only == 0 ){
 			if( (int)uncompressed_size < 0 ){
 				printf(_("After unpacking %dK disk space will be freed.\n"),
